--- a/index.html
+++ b/index.html
@@ -5,65 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <!-- Header -->
 
     <header>
       <nav>
-        <a href="">WebStudio</a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="" class="link logo logo-color-head"><span class="logo-color-1">Web</span>Studio</a>
+        <ul class="header list">
+          <li><a href="" class="link nav-color">Студия</a></li>
+          <li><a href="/portfolio.html" class="link nav-color">Портфолио</a></li>
+          <li><a href="" class="link nav-color">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link contacts-color">info@devstudio.com</a>
+        </li>
+        <li><a href="tel:+380961111111" class="link contacts-color">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
-      <!-- Hero -->
+      <!-- hero -->
 
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero-title-bg">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="btn">Заказать услугу</button>
       </section>
 
-      <!-- About us -->
+      <!-- about us -->
 
       <section>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3 class="about-title">Внимание к деталям</h3>
+            <p class="about-text">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="about-title">Пунктуальность</h3>
+            <p class="about-text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="about-title">Планирование</h3>
+            <p class="about-text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="about-title">Современные технологии</h3>
+            <p class="about-text">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
 
-      <!-- What we are doing? -->
+      <!-- what we are doing? -->
 
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/what-doing/img1.jpg"
@@ -91,11 +104,11 @@
         </ul>
       </section>
 
-      <!-- Our team -->
+      <!-- our team -->
 
       <section>
-        <h2>Наша команда</h2>
-        <ul>
+        <h2 class="title">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/our-team/img-1.jpg"
@@ -103,41 +116,44 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-item-title">Игорь Демьяненко</h3>
+            <p class="team-item-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/our-team/img-2.jpg" alt="Ольга Репина" width="270" height="260" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-item-title">Ольга Репина</h3>
+            <p class="team-item-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/our-team/img-3.jpg" alt="Николай Тарасов" width="270" height="260" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-item-title">Николай Тарасов</h3>
+            <p class="team-item-text">Marketing</p>
           </li>
           <li>
             <img src="./images/our-team/img-4.jpg" alt="Михаил Ермаков" width="270" height="260" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-item-title">Михаил Ермаков</h3>
+            <p class="team-item-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <!-- Footer -->
+    <!-- footer -->
 
-    <footer>
-      <a href="">WebStudio</a>
-      <ul>
+    <footer class="footer-bg">
+      <a href="" class="link logo logo-color-foot"><span class="logo-color-1">Web</span>Studio</a>
+      <ul class="list footer-link">
         <li>
           <a
             href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+            class="footer-map link"
             >г. Киев, пр-т Леси Украинки, 26</a
           >
         </li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="footer-contacts link">info@devstudio.com</a>
+        </li>
+        <li><a href="tel:+380961111111" class="footer-contacts link">+38 096 111 11 11</a></li>
       </ul>
     </footer>
   </body>
