--- a/portfolio.html
+++ b/portfolio.html
@@ -5,22 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <!-- header -->
 
     <header>
       <nav>
-        <a href="">WebStudio</a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="" class="link logo logo-color-head"><span class="logo-color-1">Web</span>Studio</a>
+        <ul class="header list">
+          <li><a href="" class="link nav-color">Студия</a></li>
+          <li><a href="/portfolio.html" class="link nav-color">Портфолио</a></li>
+          <li><a href="" class="link nav-color">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link contacts-color">info@devstudio.com</a>
+        </li>
+        <li><a href="tel:+380961111111" class="link contacts-color">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -102,17 +111,20 @@
 
     <!-- footer -->
 
-    <footer>
-      <a href="">WebStudio</a>
-      <ul>
+    <footer class="footer-bg">
+      <a href="" class="link logo logo-color-foot"><span class="logo-color-1">Web</span>Studio</a>
+      <ul class="list footer-link">
         <li>
           <a
             href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+            class="footer-map link"
             >г. Киев, пр-т Леси Украинки, 26</a
           >
         </li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="footer-contacts link">info@devstudio.com</a>
+        </li>
+        <li><a href="tel:+380961111111" class="footer-contacts link">+38 096 111 11 11</a></li>
       </ul>
     </footer>
   </body>
