--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 
     <header>
       <nav>
-        <a href="" class="link logo logo-color-head"><span class="logo-color-1">Web</span>Studio</a>
+        <a href="./index.html" class="link logo"><span class="logo-color-first">Web</span>Studio</a>
         <ul class="header list">
-          <li><a href="" class="link nav-color">Студия</a></li>
-          <li><a href="/portfolio.html" class="link nav-color">Портфолио</a></li>
-          <li><a href="" class="link nav-color">Контакты</a></li>
+          <li><a href="./index.html" class="link nav">Студия</a></li>
+          <li><a href="/portfolio.html" class="link nav">Портфолио</a></li>
+          <li><a href="" class="link nav">Контакты</a></li>
         </ul>
       </nav>
       <ul class="header list">
         <li>
-          <a href="mailto:info@devstudio.com" class="link contacts-color">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a>
         </li>
-        <li><a href="tel:+380961111111" class="link contacts-color">+38 096 111 11 11</a></li>
+        <li><a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -141,7 +141,9 @@
     <!-- footer -->
 
     <footer class="footer-bg">
-      <a href="" class="link logo logo-color-foot"><span class="logo-color-1">Web</span>Studio</a>
+      <a href="./index.html" class="link logo logo-color-footer"
+        ><span class="logo-color-first">Web</span>Studio</a
+      >
       <ul class="list footer-link">
         <li>
           <a
