--- a/portfolio.html
+++ b/portfolio.html
@@ -15,21 +15,20 @@
   </head>
   <body>
     <!-- header -->
-
     <header>
       <nav>
-        <a href="" class="link logo logo-color-head"><span class="logo-color-1">Web</span>Studio</a>
+        <a href="./index.html" class="link logo"><span class="logo-color-first">Web</span>Studio</a>
         <ul class="header list">
-          <li><a href="" class="link nav-color">Студия</a></li>
-          <li><a href="/portfolio.html" class="link nav-color">Портфолио</a></li>
-          <li><a href="" class="link nav-color">Контакты</a></li>
+          <li><a href="./index.html" class="link nav">Студия</a></li>
+          <li><a href="/portfolio.html" class="link nav">Портфолио</a></li>
+          <li><a href="" class="link nav">Контакты</a></li>
         </ul>
       </nav>
       <ul class="header list">
         <li>
-          <a href="mailto:info@devstudio.com" class="link contacts-color">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a>
         </li>
-        <li><a href="tel:+380961111111" class="link contacts-color">+38 096 111 11 11</a></li>
+        <li><a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -37,23 +36,23 @@
 
     <main>
       <section>
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайти</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <ul class="list">
+          <li><button type="button" class="portfolio-btn">Все</button></li>
+          <li><button type="button" class="portfolio-btn">Веб-сайти</button></li>
+          <li><button type="button" class="portfolio-btn">Приложения</button></li>
+          <li><button type="button" class="portfolio-btn">Дизайн</button></li>
+          <li><button type="button" class="portfolio-btn">Маркетинг</button></li>
         </ul>
-        <ul>
+        <ul class="list">
           <li>
             <img src="/images/portfolios/laptop1.jpg" alt="laptop1" width="370" height="294" />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <h3 class="portfolio-title">Технокряк</h3>
+            <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
             <img src="/images/portfolios/poster.jpg" alt="poster" width="370" height="294" />
-            <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-            <p>Дизайн</p>
+            <h3 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+            <p class="portfolio-text">Дизайн</p>
           </li>
           <li>
             <img
@@ -62,8 +61,8 @@
               width="370"
               height="294"
             />
-            <h3>Ресторан <span lang="en">Seafood</span></h3>
-            <p>Приложение</p>
+            <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
+            <p class="portfolio-text">Приложение</p>
           </li>
           <li>
             <img
@@ -72,13 +71,13 @@
               width="370"
               height="294"
             />
-            <h3>Проект <span lang="en">Prime</span></h3>
-            <p>Маркетинг</p>
+            <h3 class="portfolio-title">Проект <span lang="en">Prime</span></h3>
+            <p class="portfolio-text">Маркетинг</p>
           </li>
           <li>
             <img src="/images/portfolios/boxes.jpg" alt="boxes" width="370" height="294" />
-            <h3>Проект <span lang="en">Boxes</span></h3>
-            <p>Приложение</p>
+            <h3 class="portfolio-title">Проект <span lang="en">Boxes</span></h3>
+            <p class="portfolio-text">Приложение</p>
           </li>
           <li>
             <img
@@ -87,23 +86,23 @@
               width="370"
               height="294"
             />
-            <h3><span lang="en">Inspiration has no Borders</span></h3>
-            <p>Веб-сайт</p>
+            <h3 class="portfolio-title"><span lang="en">Inspiration has no Borders</span></h3>
+            <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
             <img src="/images/portfolios/book.jpg" alt="book" width="370" height="294" />
-            <h3>Издание <span lang="en"></span>Limited Edition</h3>
-            <p>Дизайн</p>
+            <h3 class="portfolio-title">Издание <span lang="en"></span>Limited Edition</h3>
+            <p class="portfolio-text">Дизайн</p>
           </li>
           <li>
             <img src="/images/portfolios/lab.jpg" alt="prodject-lab" width="370" height="294" />
-            <h3>Проект <span lang="en"></span>LAB</h3>
-            <p>Маркетинг</p>
+            <h3 class="portfolio-title">Проект <span lang="en"></span>LAB</h3>
+            <p class="portfolio-text">Маркетинг</p>
           </li>
           <li>
             <img src="/images/portfolios/laptop2.jpg" alt="laptop2" width="370" height="294" />
-            <h3><span lang="en">Growing Business</span></h3>
-            <p>Приложение</p>
+            <h3 class="portfolio-title"><span lang="en">Growing Business</span></h3>
+            <p class="portfolio-text">Приложение</p>
           </li>
         </ul>
       </section>
@@ -112,7 +111,9 @@
     <!-- footer -->
 
     <footer class="footer-bg">
-      <a href="" class="link logo logo-color-foot"><span class="logo-color-1">Web</span>Studio</a>
+      <a href="./index.html" class="link logo logo-color-footer"
+        ><span class="logo-color-first">Web</span>Studio</a
+      >
       <ul class="list footer-link">
         <li>
           <a
