--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
     <!-- header -->
     <header>
       <nav>
-        <a href="./index.html" class="link logo"><span class="logo-color-first">Web</span>Studio</a>
+        <a href="/index.html" class="link logo"><span class="logo-color-first">Web</span>Studio</a>
         <ul class="header list">
-          <li><a href="./index.html" class="link nav">Студия</a></li>
+          <li><a href="/index.html" class="link nav">Студия</a></li>
           <li><a href="/portfolio.html" class="link nav">Портфолио</a></li>
           <li><a href="" class="link nav">Контакты</a></li>
         </ul>
