--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     <header>
       <nav>
-        <a href="/index.html" class="link logo"><span class="logo-color-first">Web</span>Studio</a>
+        <a href=".index.html" class="link logo"><span class="logo-color-first">Web</span>Studio</a>
         <ul class="header list">
-          <li><a href="/index.html" class="link nav">Студия</a></li>
-          <li><a href="/portfolio.html" class="link nav">Портфолио</a></li>
+          <li><a href=".index.html" class="link nav">Студия</a></li>
+          <li><a href=".portfolio.html" class="link nav">Портфолио</a></li>
           <li><a href="" class="link nav">Контакты</a></li>
         </ul>
       </nav>
