--- a/portfolio.html
+++ b/portfolio.html
@@ -11,16 +11,16 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header -->
     <header>
       <nav>
-        <a href="/index.html" class="link logo"><span class="logo-color-first">Web</span>Studio</a>
+        <a href=".index.html" class="link logo"><span class="logo-color-first">Web</span>Studio</a>
         <ul class="header list">
-          <li><a href="/index.html" class="link nav">Студия</a></li>
-          <li><a href="/portfolio.html" class="link nav">Портфолио</a></li>
+          <li><a href=".index.html" class="link nav">Студия</a></li>
+          <li><a href=".portfolio.html" class="link nav">Портфолио</a></li>
           <li><a href="" class="link nav">Контакты</a></li>
         </ul>
       </nav>
