--- a/portfolio.html
+++ b/portfolio.html
@@ -45,18 +45,18 @@
         </ul>
         <ul class="list">
           <li>
-            <img src="/images/portfolios/laptop1.jpg" alt="laptop1" width="370" height="294" />
+            <img src="./images/portfolios/laptop1.jpg" alt="laptop1" width="370" height="294" />
             <h3 class="portfolio-title">Технокряк</h3>
             <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
-            <img src="/images/portfolios/poster.jpg" alt="poster" width="370" height="294" />
+            <img src="./images/portfolios/poster.jpg" alt="poster" width="370" height="294" />
             <h3 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
             <p class="portfolio-text">Дизайн</p>
           </li>
           <li>
             <img
-              src="/images/portfolios/restaurant.jpg"
+              src="./images/portfolios/restaurant.jpg"
               alt="restaurant"
               width="370"
               height="294"
@@ -66,7 +66,7 @@
           </li>
           <li>
             <img
-              src="/images/portfolios/headphones.jpg"
+              src="./images/portfolios/headphones.jpg"
               alt="headphones"
               width="370"
               height="294"
@@ -75,13 +75,13 @@
             <p class="portfolio-text">Маркетинг</p>
           </li>
           <li>
-            <img src="/images/portfolios/boxes.jpg" alt="boxes" width="370" height="294" />
+            <img src="./images/portfolios/boxes.jpg" alt="boxes" width="370" height="294" />
             <h3 class="portfolio-title">Проект <span lang="en">Boxes</span></h3>
             <p class="portfolio-text">Приложение</p>
           </li>
           <li>
             <img
-              src="/images/portfolios/inspiration.jpg"
+              src="./images/portfolios/inspiration.jpg"
               alt="inspiration"
               width="370"
               height="294"
@@ -90,17 +90,17 @@
             <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
-            <img src="/images/portfolios/book.jpg" alt="book" width="370" height="294" />
+            <img src="./images/portfolios/book.jpg" alt="book" width="370" height="294" />
             <h3 class="portfolio-title">Издание <span lang="en"></span>Limited Edition</h3>
             <p class="portfolio-text">Дизайн</p>
           </li>
           <li>
-            <img src="/images/portfolios/lab.jpg" alt="prodject-lab" width="370" height="294" />
+            <img src="./images/portfolios/lab.jpg" alt="prodject-lab" width="370" height="294" />
             <h3 class="portfolio-title">Проект <span lang="en"></span>LAB</h3>
             <p class="portfolio-text">Маркетинг</p>
           </li>
           <li>
-            <img src="/images/portfolios/laptop2.jpg" alt="laptop2" width="370" height="294" />
+            <img src="./images/portfolios/laptop2.jpg" alt="laptop2" width="370" height="294" />
             <h3 class="portfolio-title"><span lang="en">Growing Business</span></h3>
             <p class="portfolio-text">Приложение</p>
           </li>
