--- a/index.html
+++ b/index.html
@@ -12,26 +12,39 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-     <link rel="stylesheet" href="./css/modern-normalize.css" />
+    <link rel="stylesheet" href="./css/modern-normalize.css" />
   </head>
   <body>
     <!-- Header -->
 
-    <header>
-      <nav>
-        <a href="./index.html" class="link logo"><span class="logo-color-first">Web</span>Studio</a>
-        <ul class="header list">
-          <li><a href="./index.html" class="link nav">Студия</a></li>
-          <li><a href="./portfolio.html" class="link nav">Портфолио</a></li>
-          <li><a href="" class="link nav">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul class="header list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a>
-        </li>
-        <li><a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a></li>
-      </ul>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a href="./index.html" class="link logo"
+            ><span class="logo-color-first">Web</span>Studio</a
+          >
+          <ul class="header-list list">
+            <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
+            <li class="header-item">
+              <a href="./portfolio.html" class="header-link link">Портфолио</a>
+            </li>
+            <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <div class="header-contacts">
+          <ul class="header-list list">
+            <li class="contacts">
+              <a href="mailto:info@devstudio.com" class="header-link-contacts link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts">
+              <a href="tel:+380961111111" class="header-link-contacts link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
 
     <main>
