--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Header -->
 
     <header class="header">
-      <div class="container header-container">
+      <div class="container header-nav">
         <nav class="header-nav">
           <a href="./index.html" class="link logo"
             ><span class="logo-color-first">Web</span>Studio</a
@@ -32,90 +32,93 @@
           </ul>
         </nav>
 
-        <div class="header-contacts">
-          <ul class="header-list list">
-            <li class="contacts">
-              <a href="mailto:info@devstudio.com" class="header-link-contacts link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="contacts">
-              <a href="tel:+380961111111" class="header-link-contacts link">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </div>
+        <ul class="header-list list">
+          <li class="contacts">
+            <a href="mailto:info@devstudio.com" class="header-link-contacts link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts">
+            <a href="tel:+380961111111" class="header-link-contacts link">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </div>
     </header>
 
     <main>
       <!-- hero -->
-
       <section class="hero-title-bg">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="btn">Заказать услугу</button>
+        <div class="container hero-container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="btn hero-button">Заказать услугу</button>
+        </div>
       </section>
 
       <!-- about us -->
 
       <section>
-        <ul class="list">
-          <li>
-            <h3 class="about-title">Внимание к деталям</h3>
-            <p class="about-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="about-title">Пунктуальность</h3>
-            <p class="about-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="about-title">Планирование</h3>
-            <p class="about-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="about-title">Современные технологии</h3>
-            <p class="about-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="list about-wrap">
+            <li class="about-item">
+              <h3 class="about-title">Внимание к деталям</h3>
+              <p class="about-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="about-title">Пунктуальность</h3>
+              <p class="about-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="about-title">Планирование</h3>
+              <p class="about-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="about-title">Современные технологии</h3>
+              <p class="about-text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- what we are doing? -->
 
       <section>
-        <h2 class="title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/what-doing/img1.jpg"
-              alt="Планшет с кодом"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/what-doing/img2.jpg"
-              alt="Телефон с ноутом"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/what-doing/img3.jpg"
-              alt="Планшет с цветами"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title">Чем мы занимаемся</h2>
+          <ul class="list doing-wrap">
+            <li class="doing-item">
+              <img
+                src="./images/what-doing/img1.jpg"
+                alt="Планшет с кодом"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                src="./images/what-doing/img2.jpg"
+                alt="Телефон с ноутом"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                src="./images/what-doing/img3.jpg"
+                alt="Планшет с цветами"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- our team -->
