--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
   <body>
     <!-- header -->
     <header class="header">
-      <div class="container header-container">
+      <div class="container header-nav">
         <nav class="header-nav">
           <a href="./index.html" class="link logo"
             ><span class="logo-color-first">Web</span>Studio</a
@@ -31,18 +31,16 @@
           </ul>
         </nav>
 
-        <div class="header-contacts">
-          <ul class="header-list list">
-            <li class="contacts">
-              <a href="mailto:info@devstudio.com" class="header-link-contacts link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="contacts">
-              <a href="tel:+380961111111" class="header-link-contacts link">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </div>
+        <ul class="header-list list">
+          <li class="contacts">
+            <a href="mailto:info@devstudio.com" class="header-link-contacts link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts">
+            <a href="tel:+380961111111" class="header-link-contacts link">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </div>
     </header>
 
