--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <!-- about us -->
 
-      <section>
+      <section class="about">
         <div class="container">
           <ul class="list about-wrap">
             <li class="about-item">
@@ -89,7 +89,7 @@
 
       <!-- what we are doing? -->
 
-      <section>
+      <section class="doing">
         <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="list doing-wrap">
@@ -123,35 +123,45 @@
 
       <!-- our team -->
 
-      <section>
-        <h2 class="title">Наша команда</h2>
-        <ul class="list">
-          <li>
+      <section class="team">
+        <div class="container">
+        <h2 class="title team-title">Наша команда</h2>
+        <ul class="list team-list">
+          <li class="team-item">
             <img
               src="./images/our-team/img-1.jpg"
               alt="Игорь Демьяненко"
               width="270"
               height="260"
             />
-            <h3 class="team-item-title">Игорь Демьяненко</h3>
-            <p class="team-item-text">Product Designer</p>
+            <div class="team-item-content">
+              <h3 class="team-item-title">Игорь Демьяненко</h3>
+              <p class="team-item-text">Product Designer</p>
+            </div>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/our-team/img-2.jpg" alt="Ольга Репина" width="270" height="260" />
-            <h3 class="team-item-title">Ольга Репина</h3>
-            <p class="team-item-text">Frontend Developer</p>
+            <div class="team-item-content">
+              <h3 class="team-item-title">Ольга Репина</h3>
+              <p class="team-item-text">Frontend Developer</p>
+            </div>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/our-team/img-3.jpg" alt="Николай Тарасов" width="270" height="260" />
-            <h3 class="team-item-title">Николай Тарасов</h3>
-            <p class="team-item-text">Marketing</p>
+            <div class="team-item-content">
+              <h3 class="team-item-title">Николай Тарасов</h3>
+              <p class="team-item-text">Marketing</p>
+            </div>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/our-team/img-4.jpg" alt="Михаил Ермаков" width="270" height="260" />
+             <div class="team-item-content">
             <h3 class="team-item-title">Михаил Ермаков</h3>
             <p class="team-item-text">UI Designer</p>
           </li>
         </ul>
+        </div>
+        
       </section>
     </main>
 
