--- a/portfolio.html
+++ b/portfolio.html
@@ -122,23 +122,27 @@
 
     <!-- footer -->
 
-    <footer class="footer-bg">
-      <a href="./index.html" class="link logo logo-color-footer"
-        ><span class="logo-color-first">Web</span>Studio</a
-      >
-      <ul class="list footer-link">
-        <li>
-          <a
-            href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-            class="footer-map link"
-            >г. Киев, пр-т Леси Украинки, 26</a
-          >
-        </li>
-        <li>
-          <a href="mailto:info@devstudio.com" class="footer-contacts link">info@devstudio.com</a>
-        </li>
-        <li><a href="tel:+380961111111" class="footer-contacts link">+38 096 111 11 11</a></li>
-      </ul>
+    <footer class="footer">
+      <div class="container">
+        <a href="./index.html" class="link logo logo-footer"
+          ><span class="logo-color-first">Web</span>Studio</a
+        >
+        <ul class="list footer-list">
+          <li class="footer-item">
+            <a
+              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+              class="footer-map link"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li class="footer-item">
+            <a href="mailto:info@devstudio.com" class="footer-contacts link">info@devstudio.com</a>
+          </li>
+          <li class="footer-item">
+            <a href="tel:+380961111111" class="footer-contacts link">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
