--- a/portfolio.html
+++ b/portfolio.html
@@ -44,79 +44,111 @@
       </div>
     </header>
 
-    <!-- main -->'
+    <!-- main -->
 
     <main>
-      <section>
-        <ul class="list">
-          <li><button type="button" class="portfolio-btn">Все</button></li>
-          <li><button type="button" class="portfolio-btn">Веб-сайти</button></li>
-          <li><button type="button" class="portfolio-btn">Приложения</button></li>
-          <li><button type="button" class="portfolio-btn">Дизайн</button></li>
-          <li><button type="button" class="portfolio-btn">Маркетинг</button></li>
-        </ul>
-        <ul class="list">
-          <li>
-            <img src="./images/portfolios/laptop1.jpg" alt="laptop1" width="370" height="294" />
-            <h3 class="portfolio-title">Технокряк</h3>
-            <p class="portfolio-text">Веб-сайт</p>
-          </li>
-          <li>
-            <img src="./images/portfolios/poster.jpg" alt="poster" width="370" height="294" />
-            <h3 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-            <p class="portfolio-text">Дизайн</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolios/restaurant.jpg"
-              alt="restaurant"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
-            <p class="portfolio-text">Приложение</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolios/headphones.jpg"
-              alt="headphones"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Проект <span lang="en">Prime</span></h3>
-            <p class="portfolio-text">Маркетинг</p>
-          </li>
-          <li>
-            <img src="./images/portfolios/boxes.jpg" alt="boxes" width="370" height="294" />
-            <h3 class="portfolio-title">Проект <span lang="en">Boxes</span></h3>
-            <p class="portfolio-text">Приложение</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolios/inspiration.jpg"
-              alt="inspiration"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title"><span lang="en">Inspiration has no Borders</span></h3>
-            <p class="portfolio-text">Веб-сайт</p>
-          </li>
-          <li>
-            <img src="./images/portfolios/book.jpg" alt="book" width="370" height="294" />
-            <h3 class="portfolio-title">Издание <span lang="en"></span>Limited Edition</h3>
-            <p class="portfolio-text">Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/portfolios/lab.jpg" alt="prodject-lab" width="370" height="294" />
-            <h3 class="portfolio-title">Проект <span lang="en"></span>LAB</h3>
-            <p class="portfolio-text">Маркетинг</p>
-          </li>
-          <li>
-            <img src="./images/portfolios/laptop2.jpg" alt="laptop2" width="370" height="294" />
-            <h3 class="portfolio-title"><span lang="en">Growing Business</span></h3>
-            <p class="portfolio-text">Приложение</p>
-          </li>
-        </ul>
+      <section class="portfolio">
+        <div class="container">
+          <ul class="list portfolio-btn-list">
+            <li class="portfolio-btn-item">
+              <button type="button" class="portfolio-btn">Все</button>
+            </li>
+            <li class="portfolio-btn-item">
+              <button type="button" class="portfolio-btn">Веб-сайти</button>
+            </li>
+            <li class="portfolio-btn-item">
+              <button type="button" class="portfolio-btn">Приложения</button>
+            </li>
+            <li class="portfolio-btn-item">
+              <button type="button" class="portfolio-btn">Дизайн</button>
+            </li>
+            <li class="portfolio-btn-item">
+              <button type="button" class="portfolio-btn">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="list portfolio-list">
+            <li class="portfolio-item">
+              <img src="./images/portfolios/laptop1.jpg" alt="laptop1" width="370" height="294" />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-title">Технокряк</h3>
+                <p class="portfolio-text">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/portfolios/poster.jpg" alt="poster" width="370" height="294" />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-title">
+                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                </h3>
+                <p class="portfolio-text">Дизайн</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolios/restaurant.jpg"
+                alt="restaurant"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
+                <p class="portfolio-text">Приложение</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolios/headphones.jpg"
+                alt="headphones"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-title">Проект <span lang="en">Prime</span></h3>
+                <p class="portfolio-text">Маркетинг</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/portfolios/boxes.jpg" alt="boxes" width="370" height="294" />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-title">Проект <span lang="en">Boxes</span></h3>
+                <p class="portfolio-text">Приложение</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/portfolios/inspiration.jpg"
+                alt="inspiration"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-title"><span lang="en">Inspiration has no Borders</span></h3>
+                <p class="portfolio-text">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/portfolios/book.jpg" alt="book" width="370" height="294" />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-title">Издание <span lang="en"></span>Limited Edition</h3>
+                <p class="portfolio-text">Дизайн</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/portfolios/lab.jpg" alt="prodject-lab" width="370" height="294" />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-title">Проект <span lang="en"></span>LAB</h3>
+                <p class="portfolio-text">Маркетинг</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/portfolios/laptop2.jpg" alt="laptop2" width="370" height="294" />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-title"><span lang="en">Growing Business</span></h3>
+                <p class="portfolio-text">Приложение</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
