--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <main>
       <!-- hero -->
-      <section class="hero-title-bg">
+      <section class="section hero-title-bg">
         <div class="container hero-container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="btn hero-button">Заказать услугу</button>
@@ -56,7 +56,7 @@
 
       <!-- about us -->
 
-      <section class="about">
+      <section class="about section">
         <div class="container">
           <ul class="list about-wrap">
             <li class="about-item">
@@ -89,7 +89,7 @@
 
       <!-- what we are doing? -->
 
-      <section class="doing">
+      <section class="section doing">
         <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="list doing-wrap">
@@ -123,7 +123,7 @@
 
       <!-- our team -->
 
-      <section class="team">
+      <section class="section">
         <div class="container">
         <h2 class="title team-title">Наша команда</h2>
         <ul class="list team-list">
