--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <main>
       <!-- hero -->
-      <section class="section hero-title-bg">
+      <section class="hero-title-bg">
         <div class="container hero-container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="btn hero-button">Заказать услугу</button>
@@ -89,7 +89,7 @@
 
       <!-- what we are doing? -->
 
-      <section class="section doing">
+      <section class="doing">
         <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="list doing-wrap">
