--- a/portfolio.html
+++ b/portfolio.html
@@ -34,11 +34,19 @@
         <ul class="header-list list">
           <li class="contacts">
             <a href="mailto:info@devstudio.com" class="header-link-contacts link"
-              >info@devstudio.com</a
-            >
+              ><svg class="header-icon" width="16" height="12">
+                <use href="./images/icons.svg#envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="contacts">
-            <a href="tel:+380961111111" class="header-link-contacts link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="header-link-contacts link">
+              <svg class="header-icon" width="10" height="16">
+                <use href="./images/icons.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
