--- a/portfolio.html
+++ b/portfolio.html
@@ -76,84 +76,107 @@
           </ul>
           <ul class="list portfolio-list">
             <li class="portfolio-item">
-              <img src="./images/portfolios/laptop1.jpg" alt="laptop1" width="370" height="294" />
-              <div class="portfolio-item-content">
-                <h3 class="portfolio-title">Технокряк</h3>
-                <p class="portfolio-text">Веб-сайт</p>
-              </div>
+              <a href="" class="porfolio-link link">
+                <img src="./images/portfolios/laptop1.jpg" alt="laptop1" width="370" height="294" />
+                <div class="portfolio-item-content">
+                  <h3 class="portfolio-title">Технокряк</h3>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img src="./images/portfolios/poster.jpg" alt="poster" width="370" height="294" />
-              <div class="portfolio-item-content">
-                <h3 class="portfolio-title">
-                  Постер <span lang="en">New Orlean vs Golden Star</span>
-                </h3>
-                <p class="portfolio-text">Дизайн</p>
-              </div>
+              <a href="" class="porfolio-link link">
+                <img src="./images/portfolios/poster.jpg" alt="poster" width="370" height="294" />
+                <div class="portfolio-item-content">
+                  <h3 class="portfolio-title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h3>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolios/restaurant.jpg"
-                alt="restaurant"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-item-content">
-                <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
-                <p class="portfolio-text">Приложение</p>
-              </div>
+              <a href="" class="porfolio-link link">
+                <img
+                  src="./images/portfolios/restaurant.jpg"
+                  alt="restaurant"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-content">
+                  <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
+                  <p class="portfolio-text">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolios/headphones.jpg"
-                alt="headphones"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-item-content">
-                <h3 class="portfolio-title">Проект <span lang="en">Prime</span></h3>
-                <p class="portfolio-text">Маркетинг</p>
-              </div>
+              <a href="" class="porfolio-link link">
+                <img
+                  src="./images/portfolios/headphones.jpg"
+                  alt="headphones"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-content">
+                  <h3 class="portfolio-title">Проект <span lang="en">Prime</span></h3>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img src="./images/portfolios/boxes.jpg" alt="boxes" width="370" height="294" />
-              <div class="portfolio-item-content">
-                <h3 class="portfolio-title">Проект <span lang="en">Boxes</span></h3>
-                <p class="portfolio-text">Приложение</p>
-              </div>
+              <a href="" class="porfolio-link link">
+                <img src="./images/portfolios/boxes.jpg" alt="boxes" width="370" height="294" />
+                <div class="portfolio-item-content">
+                  <h3 class="portfolio-title">Проект <span lang="en">Boxes</span></h3>
+                  <p class="portfolio-text">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolios/inspiration.jpg"
-                alt="inspiration"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-item-content">
-                <h3 class="portfolio-title"><span lang="en">Inspiration has no Borders</span></h3>
-                <p class="portfolio-text">Веб-сайт</p>
-              </div>
+              <a href="" class="porfolio-link link">
+                <img
+                  src="./images/portfolios/inspiration.jpg"
+                  alt="inspiration"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-content">
+                  <h3 class="portfolio-title"><span lang="en">Inspiration has no Borders</span></h3>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img src="./images/portfolios/book.jpg" alt="book" width="370" height="294" />
-              <div class="portfolio-item-content">
-                <h3 class="portfolio-title">Издание <span lang="en"></span>Limited Edition</h3>
-                <p class="portfolio-text">Дизайн</p>
-              </div>
+              <a href="" class="porfolio-link link">
+                <img src="./images/portfolios/book.jpg" alt="book" width="370" height="294" />
+                <div class="portfolio-item-content">
+                  <h3 class="portfolio-title">Издание <span lang="en"></span>Limited Edition</h3>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img src="./images/portfolios/lab.jpg" alt="prodject-lab" width="370" height="294" />
-              <div class="portfolio-item-content">
-                <h3 class="portfolio-title">Проект <span lang="en"></span>LAB</h3>
-                <p class="portfolio-text">Маркетинг</p>
-              </div>
+              <a href="" class="porfolio-link link">
+                <img
+                  src="./images/portfolios/lab.jpg"
+                  alt="prodject-lab"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-content">
+                  <h3 class="portfolio-title">Проект <span lang="en"></span>LAB</h3>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img src="./images/portfolios/laptop2.jpg" alt="laptop2" width="370" height="294" />
-              <div class="portfolio-item-content">
-                <h3 class="portfolio-title"><span lang="en">Growing Business</span></h3>
-                <p class="portfolio-text">Приложение</p>
-              </div>
+              <a href="" class="porfolio-link link">
+                <img src="./images/portfolios/laptop2.jpg" alt="laptop2" width="370" height="294" />
+                <div class="portfolio-item-content">
+                  <h3 class="portfolio-title"><span lang="en">Growing Business</span></h3>
+                  <p class="portfolio-text">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
