--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <section class="hero-title-bg">
         <div class="container hero-container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="btn hero-button">Заказать услугу</button>
+          <button type="button" class="btn hero-button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
 
@@ -435,5 +435,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close" data-modal-close>
+          <svg class="icon-close" width="11" height="11">
+            <use href="./images/icons.svg#modal-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
