--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             ><span class="logo-color-first">Web</span>Studio</a
           >
           <ul class="header-list list">
-            <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
+            <li class="header-item">
+              <a href="./index.html" class="header-link link current">Студия</a>
+            </li>
             <li class="header-item">
               <a href="./portfolio.html" class="header-link link">Портфолио</a>
             </li>
@@ -120,7 +122,7 @@
       <section class="doing">
         <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
-          <ul class="list doing-wrap">
+          <ul class="list doing-list">
             <li class="doing-item">
               <img
                 src="./images/what-doing/img1.jpg"
@@ -128,6 +130,7 @@
                 width="370"
                 height="294"
               />
+              <p class="doing-text">Десктопные приложения</p>
             </li>
             <li class="doing-item">
               <img
@@ -136,6 +139,7 @@
                 width="370"
                 height="294"
               />
+              <p class="doing-text">Мобильные приложения</p>
             </li>
             <li class="doing-item">
               <img
@@ -144,6 +148,7 @@
                 width="370"
                 height="294"
               />
+              <p class="doing-text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
