--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/modern-normalize.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!-- Header -->
@@ -130,7 +131,7 @@
                 width="370"
                 height="294"
               />
-              <p class="doing__item--text">Десктопные приложения</p>
+              <p class="doing--text">Десктопные приложения</p>
             </li>
             <li class="doing__item">
               <img
@@ -139,7 +140,7 @@
                 width="370"
                 height="294"
               />
-              <p class="doing__item--text">Мобильные приложения</p>
+              <p class="doing--text">Мобильные приложения</p>
             </li>
             <li class="doing__item">
               <img
