--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@
               <button type="button" class="portfolio-btn">Все</button>
             </li>
             <li class="portfolio__item-btn">
-              <button type="button" class="portfolio-btn">Веб-сайти</button>
+              <button type="button" class="portfolio-btn">Веб-сайты</button>
             </li>
             <li class="portfolio__item-btn">
               <button type="button" class="portfolio-btn">Приложения</button>
@@ -142,15 +142,15 @@
                     />
                     <source
                       srcset="
-                        ./images/portfolios/desk/laptop1-tab.jpg    1x,
-                        ./images/portfolios/desk/laptop1-tab-2x.jpg 2x
+                        ./images/portfolios/tab/laptop1-tab.jpg    1x,
+                        ./images/portfolios/tab/laptop1-tab-2x.jpg 2x
                       "
                       media="(min-width:768px)"
                     />
                     <source
                       srcset="
-                        ./images/portfolios/desk/laptop1-mob.jpg    1x,
-                        ./images/portfolios/desk/laptop1-mob-2x.jpg 2x
+                        ./images/portfolios/mob/laptop1.jpg    1x,
+                        ./images/portfolios/mob/laptop1-2x.jpg 2x
                       "
                       media="(min-width:480px)"
                     />
@@ -171,13 +171,30 @@
             <li class="portfolio__item">
               <a href="" class="link">
                 <div class="portfolio__item-wrap">
-                  <img
-                    class="portfolio-img"
-                    src="./images/portfolios/poster.jpg"
-                    alt="poster"
-                    width="370"
-                    height="294"
-                  />
+                  <picture class="portfolio-img">
+                    <source
+                      srcset="/images/portfolios/desk/.jpg
+                    ./images/portfolios/desk/poster-desk.jpg  1x,
+                    ./images/portfolios/desk/poster-desk-2x.jpg 2x
+                  "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/tab/poster-tab.jpg    1x,
+                        ./images/portfolios/tab/poster-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/mob/poster.jpg    1x,
+                        ./images/portfolios/mob/poster-2x.jpg 2x
+                      "
+                      media="(min-width:480px)"
+                    />
+                    <img src="./images/portfolios/desk/poster-desk.jpg" alt="poster" />
+                  </picture>
                   <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
@@ -193,13 +210,30 @@
             <li class="portfolio__item">
               <a href="" class="link">
                 <div class="portfolio__item-wrap">
-                  <img
-                    class="portfolio-img"
-                    src="./images/portfolios/restaurant.jpg"
-                    alt="restaurant"
-                    width="370"
-                    height="294"
-                  />
+                  <picture class="portfolio-img">
+                    <source
+                      srcset="/images/portfolios/desk/.jpg
+                    ./images/portfolios/desk/restaurant-desk.jpg  1x,
+                    ./images/portfolios/desk/restaurant-desk-2x.jpg 2x
+                  "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/tab/restaurant-tab.jpg    1x,
+                        ./images/portfolios/tab/restaurant-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/mob/restaurant.jpg    1x,
+                        ./images/portfolios/mob/restaurant-2x.jpg 2x
+                      "
+                      media="(min-width:480px)"
+                    />
+                    <img src="./images/portfolios/desk/restaurant-desk.jpg" alt="restaurant" />
+                  </picture>
                   <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
@@ -213,13 +247,30 @@
             <li class="portfolio__item">
               <a href="" class="link">
                 <div class="portfolio__item-wrap">
-                  <img
-                    class="portfolio-img"
-                    src="./images/portfolios/headphones.jpg"
-                    alt="headphones"
-                    width="370"
-                    height="294"
-                  />
+                  <picture class="portfolio-img">
+                    <source
+                      srcset="/images/portfolios/desk/.jpg
+                    ./images/portfolios/desk/headphones-desk.jpg  1x,
+                    ./images/portfolios/desk/headphones-desk-2x.jpg 2x
+                  "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/tab/headphones-tab.jpg    1x,
+                        ./images/portfolios/tab/headphones-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/mob/headphones.jpg    1x,
+                        ./images/portfolios/mob/headphones-2x.jpg 2x
+                      "
+                      media="(min-width:480px)"
+                    />
+                    <img src="./images/portfolios/desk/headphones-desk.jpg" alt="headphones" />
+                  </picture>
                   <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
@@ -233,13 +284,30 @@
             <li class="portfolio__item">
               <a href="" class="link">
                 <div class="portfolio__item-wrap">
-                  <img
-                    class="portfolio-img"
-                    src="./images/portfolios/boxes.jpg"
-                    alt="boxes"
-                    width="370"
-                    height="294"
-                  />
+                  <picture class="portfolio-img">
+                    <source
+                      srcset="/images/portfolios/desk/.jpg
+                    ./images/portfolios/desk/boxes-desk.jpg  1x,
+                    ./images/portfolios/desk/boxes-desk-2x.jpg 2x
+                  "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/tab/boxes-tab.jpg    1x,
+                        ./images/portfolios/tab/boxes-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/mob/boxes.jpg    1x,
+                        ./images/portfolios/mob/boxes-2x.jpg 2x
+                      "
+                      media="(min-width:480px)"
+                    />
+                    <img src="./images/portfolios/desk/boxes-desk.jpg" alt="boxes" />
+                  </picture>
                   <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
@@ -253,13 +321,30 @@
             <li class="portfolio__item">
               <a href="" class="link">
                 <div class="portfolio__item-wrap">
-                  <img
-                    class="portfolio-img"
-                    src="./images/portfolios/inspiration.jpg"
-                    alt="inspiration"
-                    width="370"
-                    height="294"
-                  />
+                  <picture class="portfolio-img">
+                    <source
+                      srcset="/images/portfolios/desk/.jpg
+                    ./images/portfolios/desk/inspiration-desk.jpg  1x,
+                    ./images/portfolios/desk/inspiration-desk-2x.jpg 2x
+                  "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/tab/inspiration-tab.jpg    1x,
+                        ./images/portfolios/tab/inspiration-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/mob/inspiration.jpg    1x,
+                        ./images/portfolios/mob/inspiration-2x.jpg 2x
+                      "
+                      media="(min-width:480px)"
+                    />
+                    <img src="./images/portfolios/desk/inspiration-desk.jpg" alt="insiration" />
+                  </picture>
                   <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
@@ -275,13 +360,30 @@
             <li class="portfolio__item">
               <a href="" class="link">
                 <div class="portfolio__item-wrap">
-                  <img
-                    class="portfolio-img"
-                    src="./images/portfolios/book.jpg"
-                    alt="book"
-                    width="370"
-                    height="294"
-                  />
+                  <picture class="portfolio-img">
+                    <source
+                      srcset="/images/portfolios/desk/.jpg
+                    ./images/portfolios/desk/book-desk.jpg  1x,
+                    ./images/portfolios/desk/book-desk-2x.jpg 2x
+                  "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/tab/book-tab.jpg    1x,
+                        ./images/portfolios/tab/book-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/mob/book.jpg    1x,
+                        ./images/portfolios/mob/book-2x.jpg 2x
+                      "
+                      media="(min-width:480px)"
+                    />
+                    <img src="./images/portfolios/desk/book-desk.jpg" alt="book" />
+                  </picture>
                   <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
@@ -297,13 +399,30 @@
             <li class="portfolio__item">
               <a href="" class="link">
                 <div class="portfolio__item-wrap">
-                  <img
-                    class="portfolio-img"
-                    src="./images/portfolios/lab.jpg"
-                    alt="prodject-lab"
-                    width="370"
-                    height="294"
-                  />
+                  <picture class="portfolio-img">
+                    <source
+                      srcset="/images/portfolios/desk/.jpg
+                    ./images/portfolios/desk/lab-desk.jpg  1x,
+                    ./images/portfolios/desk/lab-desk-2x.jpg 2x
+                  "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/tab/lab-tab.jpg    1x,
+                        ./images/portfolios/tab/lab-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/mob/lab.jpg    1x,
+                        ./images/portfolios/mob/lab-2x.jpg 2x
+                      "
+                      media="(min-width:480px)"
+                    />
+                    <img src="./images/portfolios/desk/lab-desk.jpg" alt="lab" />
+                  </picture>
                   <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
@@ -317,13 +436,30 @@
             <li class="portfolio__item">
               <a href="" class="link">
                 <div class="portfolio__item-wrap">
-                  <img
-                    class="portfolio-img"
-                    src="./images/portfolios/laptop2.jpg"
-                    alt="laptop2"
-                    width="370"
-                    height="294"
-                  />
+                  <picture class="portfolio-img">
+                    <source
+                      srcset="/images/portfolios/desk/.jpg
+                    ./images/portfolios/desk/laptop2-desk.jpg  1x,
+                    ./images/portfolios/desk/laptop2-desk-2x.jpg 2x
+                  "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/tab/laptop2-tab.jpg    1x,
+                        ./images/portfolios/tab/laptop2-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/mob/laptop2.jpg    1x,
+                        ./images/portfolios/mob/laptop2-2x.jpg 2x
+                      "
+                      media="(min-width:480px)"
+                    />
+                    <img src="./images/portfolios/desk/laptop2-desk.jpg" alt="laptop2" />
+                  </picture>
                   <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
