--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
       <!-- what we are doing? -->
 
-      <!-- <section class="doing">
+      <section class="doing visually-hiddens">
         <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="list doing__list">
@@ -205,7 +205,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- our team -->
 
